--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -2,12 +2,12 @@
 
 one:
   name: Dave Thomas
-  address: MyText
+  address: Yokohama
   email: dave@example.org
   pay_type: Check
 
 two:
-  name: MyString
-  address: MyText
-  email: MyString
-  pay_type: MyString
+  name: Dung Nguyen
+  address: Tokyo
+  email: dungnt@gmail.com
+  pay_type: "Check"
